# OnionChat

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
cmake/toolchains/: x86_64-linux-clang14.cmake  x86_64-macos-clang14.cmake  x86_64-windows-clang14.cmake
cmake/toolchains/bases/: clang14-base.cmake  linux-base.cmake  macos-base.cmake  windows-base.cmake
cmake/toolchains/include/: clang14-base.cmake  linux-base.cmake
common/: CMakeLists.txt
common/include/: datatypes.h  singleton.h
connection/: CMakeLists.txt  transport.cpp
connection/include/: client.h  connection.h  socket.h
connection/python/: udp_server.py
connection/quic/include/: quic.h
connection/quic/src/: engine.cpp  engine.h  quic.cpp
connection/src/unix/: socket.cpp
connection/src/windows/: socket.cpp
connection/udp/include/: udp.h
connection/udp/src/: udp.cpp
connection/unix/src/: socket.cpp
logging/: CMakeLists.txt
logging/include/: logger.h
logging/src/: logger.cpp
transport/: CMakeLists.txt  transport.cpp
transport/include/: client.h  connection.h  transport.h
transport/quic/include/: quic.h
transport/quic/src/: engine.cpp  quic.cpp  quic_engine.h
transports/quic/: CMakeLists.txt
transports/quic/src/: hello_world.cpp
